test/tests/compiler/18_structures/invalid_lex/plx1_force_use_in_line.plx
pub fn main(none) i32 {
    str: string = use! "string"
    return 0
}
